Closed Bug 1683487 Opened 5 years ago Closed 5 years ago

Mouse-wheel scroll stopped working in browserAction popup with WebRender

Categories

(WebExtensions :: General, defect, P2)

Firefox 86
Unspecified
Windows
defect

Tracking

(firefox-esr78 unaffected, firefox84 unaffected, firefox85 unaffected, firefox86 fixed)

RESOLVED FIXED
86 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- unaffected
firefox85 --- unaffected
firefox86 --- fixed

People

(Reporter: erosman, Assigned: hiro)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Since the last 2-3 upgrade (AFAIK), the mouse-wheel scroll stopped working in the browser Action popup on windows.

Additionally, installed and tested with "Multi-Account Containers" to verify the issue is not limited to a particular WebExtension.

After checking with #nightly:mozilla.org it seems there is no problem on Linux.

I am not able to use mozregression as it doesn't work on win7.

Note: mouse-wheel scroll works fine in bookmarks popup.

(In reply to erosman from comment #0)

Since the last 2-3 upgrade (AFAIK), the mouse-wheel scroll stopped working in the browser Action popup on windows.

By 2-3 upgrades, is this nightly or something else?

Waiting for regression test from QA

Flags: needinfo?(eros_uk)

Steps:

  1. install https://addons.mozilla.org/en-US/firefox/addon/multi-account-containers/
  2. Click on toolbutton of the addon
  3. Click "Manage Containers" at bottom of arrow panel
  4. Create several containers so that scroll bar will appear
  5. Try scroll the list with mouse Wheel

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=8c8bbc19e7f90f621bc92f805db1fddcdad605b4&tochange=d8bd960f9b82ca8d9ef340ae488673b6f0c0669e

Has Regression Range: --- → yes
Has STR: --- → yes
Regressed by: 1493208

By 2-3 upgrades, is this nightly or something else?

Nightly Indeed .... bug version is also set to Firefox 86

Flags: needinfo?(eros_uk)
Flags: needinfo?(hikezoe.birchill)

erosma, thanks for reporting this issue! We have a similar report (bug 1683612), but it's scrollable, the scrollbar doesn't appear, is your issue different? not scrollable?

Flags: needinfo?(hikezoe.birchill) → needinfo?(eros_uk)
See Also: → 1683612
Attached image popup.png
Flags: needinfo?(eros_uk)

the scrollbar doesn't appear, is your issue different? not scrollable?

In this case, the scrollbar appears but does not scroll with mouse-wheel on Windows 7.

Thanks! That's weird, it sounds an opposed behavior. :/

Flags: needinfo?(hikezoe.birchill)
OS: Unspecified → Windows 7

I can aloso reproduce the issue on Windows10.

OS: Windows 7 → Windows

Thank you, Alice now I confirmed it on my Windows 10 laptop as well, but it looks like this is WebRender specific.

Summary: Mouse-wheel scroll stopped working in browserAction popup → Mouse-wheel scroll stopped working in browserAction popup with WebRender

Set release status flags based on info from the regressing bug 1493208

I just realized that keyboard scrolling works fine.

ScrollMetadata.mLineScrollAmount is (0, 0) on Windows for some reasons, thus mouse wheel delta is calculated (0, 0), which means user can't scroll by mouse wheel.

Though I am not 100% sure, it seems this SetScrollLineAmount isn't called.

While I was in a rabbit hole to try to find out where the (0, 0) line scroll amount comes from, kats told me on Matrix that using gfxVars::UseWebRender() might be causing this problem such as a check in APZCTreeManager::GetTargetAPZC. The part is actually the culprit of this issue.

We should (probably) fix other places where we use gfxVars::UseWebRender(), I will file bugs for them.

Assignee: nobody → hikezoe.birchill
Status: NEW → ASSIGNED
Flags: needinfo?(hikezoe.birchill)
See Also: → 1684128

Probably I could add a test for the change, will try it later.

(In reply to erosman from comment #0)

After checking with #nightly:mozilla.org it seems there is no problem on Linux.

I can reproduce it on Linux with WebRender.

(In reply to Danny Colin [:sdk] from comment #16)

(In reply to erosman from comment #0)

After checking with #nightly:mozilla.org it seems there is no problem on Linux.

I can reproduce it on Linux with WebRender.

Because of this restriction.

Attachment #9194620 - Attachment description: Bug 1683487 - Use GetAPZCAtPointWR depending on whether the corresponding window uses WebRender instead of the preference value. → Bug 1683487 - Use GetAPZCAtPointWR depending on whether the corresponding window uses WebRender instead of the preference value. r?botond
Severity: -- → S3
Priority: -- → P2
See Also: → 1684445

Given that there are a bunch of bug reports on this issue, I will land attachment #9194620 [details] even though unfortunately the test in the change doesn't work properly on Mac OS because nsIDOMWindowUtils.sendNativeMouseScrollEvent doesn't work properly for popup windows on Mac. I am going to skip the test on Mac and will file a follow up bug to enable the test on Mac.

See Also: → 1685218
Pushed by hikezoe.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/01bc787e90de Use GetAPZCAtPointWR depending on whether the corresponding window uses WebRender instead of the preference value. r=botond
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch

I can confirm, on 86.0a1 (2021-01-06) (64-bit) Windows 7, Mouse-wheel scroll is working again.

(In reply to Hiroyuki Ikezoe (:hiro) from comment #21)

Given that there are a bunch of bug reports on this issue, I will land attachment #9194620 [details] even though unfortunately the test in the change doesn't work properly on Mac OS because nsIDOMWindowUtils.sendNativeMouseScrollEvent doesn't work properly for popup windows on Mac. I am going to skip the test on Mac and will file a follow up bug to enable the test on Mac.

Thanks Hiro!

Based on bug 1684445 I think you could add a click test (instead of scrolling) that should cover Mac as well.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: