Bug 1683487 - Use GetAPZCAtPointWR depending on whether the corresponding window uses WebRender instead of the preference value. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D100431